# kalmanbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/api/: cli.md  core.md  datasets.md  estimation.md  experiment.md  filters.md  models.md
docs/benchmarks/: performance.md
docs/getting-started/: installation.md  key-concepts.md  quickstart.md
docs/theory/: kalman-filter-derivation.md  state-space-theory.md
kalmanbox/: __init__.py  __version__.py  _logging.py
kalmanbox/cli/: __init__.py  main.py
kalmanbox/core/: __init__.py  config.py  model.py  representation.py  results.py
kalmanbox/datasets/: __init__.py  load.py
kalmanbox/diagnostics/: __init__.py  convergence.py  missing.py  residuals.py  tests.py
kalmanbox/estimation/: __init__.py  bayesian.py  diffuse.py  em.py  mle.py
kalmanbox/experiment/: __init__.py  comparison.py  experiment.py
kalmanbox/filters/: __init__.py  ekf.py  enkf.py  information.py  kalman.py  square_root.py  ukf.py
kalmanbox/models/: __init__.py  arima_ssm.py  bsm.py  custom.py  cycle.py  dynamic_factor.py  local_level.py  local_linear_trend.py  regression_ssm.py  tvp.py  ucm.py
kalmanbox/reports/: __init__.py  css_manager.py  report_manager.py  template_manager.py
kalmanbox/simulation/: __init__.py  bootstrap.py  simulate.py
kalmanbox/smoothers/: __init__.py  disturbance.py  fixed_interval.py  fixed_lag.py  rts.py
kalmanbox/utils/: __init__.py  matrix_ops.py  numba_core.py  transforms.py
kalmanbox/visualization/: __init__.py  components.py  diagnostics_plot.py  export.py  factor_plot.py  filter_plot.py  forecast_plot.py  state_plot.py  themes.py
scripts/: download_brazil_data.py
tests/: conftest.py  test_hypothesis_properties.py  test_numba.py  test_qa_phases.py
tests/cli/: test_cli.py
tests/core/: test_model.py  test_representation.py  test_results.py
tests/diagnostics/: test_convergence.py  test_missing.py  test_residuals.py  test_tests.py
tests/estimation/: test_bayesian.py  test_diffuse.py  test_em.py  test_mle.py
tests/experiment/: test_experiment.py
tests/filters/: test_ekf.py  test_enkf.py  test_information.py  test_kalman.py  test_square_root.py  test_ukf.py
tests/models/: test_arima_ssm.py  test_bsm.py  test_custom.py  test_cycle.py  test_dynamic_factor.py  test_local_level.py  test_local_linear_trend.py  test_regression_ssm.py  test_tvp.py  test_ucm.py
tests/reports/: test_reports.py
tests/simulation/: test_bootstrap.py  test_simulate.py
tests/smoothers/: test_disturbance.py  test_fixed_interval.py  test_fixed_lag.py  (+1 more)
(+48 files in other folders)
